--- a/src/CadastroPessoa/Views/Pessoa/Index.cshtml
+++ b/src/CadastroPessoa/Views/Pessoa/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<CadastroPessoa.Models.Pessoa>
+@model IEnumerable<Application.Models.DTOs.PessoaInfo>
 
 @{
     ViewData["Title"] = "Index";
@@ -7,7 +7,10 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Cadastrar Pessoa</a>
+</p>
+<p>
+    <a asp-action="Get">Busca Pessoa Por Nome</a>
 </p>
 <table class="table">
     <thead>
@@ -20,24 +23,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Cep)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Endereco)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Numero)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Bairro)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Complemento)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Municipio)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Uf)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Rg)
@@ -59,24 +44,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Cep)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Endereco)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Numero)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Bairro)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Complemento)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Municipio)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Uf)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Rg)
