--- a/src/CadastroPessoa/Views/Pessoa/GetByName.cshtml
+++ b/src/CadastroPessoa/Views/Pessoa/GetByName.cshtml
@@ -19,8 +19,8 @@
 </form>
 
 <div>
-    <h4>Pessoa</h4>
     <hr />
+    <h4>Pessoa</h4>
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Cpf)
@@ -53,4 +53,8 @@
             @Html.DisplayFor(model => model.DataDeCriacao)
         </dd>
     </dl>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
