--- a/src/CadastroPessoa/Views/Pessoa/Delete.cshtml
+++ b/src/CadastroPessoa/Views/Pessoa/Delete.cshtml
@@ -4,12 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Excluir Cadastro</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza de que deseja excluir?</h3>
 <div>
-    <h4>Pessoa</h4>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Cpf)
@@ -81,7 +79,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Excluir" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-info">Pagina Inicial</a>
     </form>
 </div>
