--- a/src/CadastroPessoa/Views/Pessoa/Details.cshtml
+++ b/src/CadastroPessoa/Views/Pessoa/Details.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes do Cadastro</h1>
 
 <div>
-    <h4>Pessoa</h4>
-    <hr />
+@*    <h4>Pessoa</h4>
+    <hr />*@
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Cpf)
@@ -43,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" class="btn btn-danger" asp-route-id="@Model.Id">Edit</a>
+    <a asp-action="Index" class="btn btn-info">Pagina Inicial</a>
 </div>
