--- a/src/CadastroPessoa/Views/Pessoa/GetByName.cshtml
+++ b/src/CadastroPessoa/Views/Pessoa/GetByName.cshtml
@@ -1,60 +1,59 @@
-﻿@model Application.Models.DTOs.PessoaInfo
+﻿@model IEnumerable<Application.Models.DTOs.PessoaInfo>
 
 @{
     ViewData["Title"] = "GetByName";
 }
 
-<h1>GetByName</h1>
+<h1>Busca Por Nome</h1>
 
-<form asp-action="GetByName">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="Nome" class="control-label"></label>
-        <input asp-for="Nome" class="form-control" />
-        <span asp-validation-for="Nome" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <input type="submit" value="Buscar" class="btn btn-primary" />
-    </div>
-</form>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Cpf)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Nome)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Cep)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Rg)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DataDeCriacao)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Cpf)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Cep)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Rg)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DataDeCriacao)
+                </td>
+                <td>
+                    <a asp-action="Details" class="btn btn-success btn-sm" asp-route-id="@item.Id">Detalhes</a>
+                    <a asp-action="Edit" class="btn btn-danger btn-sm" asp-route-id="@item.Id">Atualizar</a>
+                    <a asp-action="Delete" class="btn btn-primary btn-sm" asp-route-id="@item.Id">Excluir</a>
+                    <a asp-action="Index" class="btn btn-info btn-sm" asp-route-id="@item.Id">Pagina Inicial</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
 
-<div>
-    <hr />
-    <h4>Pessoa</h4>
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Cpf)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Cpf)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Cep)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Cep)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Rg)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Rg)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DataDeCriacao)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DataDeCriacao)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
