--- a/src/CadastroPessoa/Views/Pessoa/Error404.cshtml
+++ b/src/CadastroPessoa/Views/Pessoa/Error404.cshtml
@@ -18,5 +18,5 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-info btn-sm">Pagina Inicial</a>
 </div>
