--- a/src/CadastroPessoa/Views/Pessoa/Create.cshtml
+++ b/src/CadastroPessoa/Views/Pessoa/Create.cshtml
@@ -62,15 +62,13 @@
                 <input asp-for="Rg" class="form-control" />
                 <span asp-validation-for="Rg" class="text-danger"></span>
             </div>
+            <br>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-info">Pagina Inicial</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
